src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Approval_Code__c</fullName>
        <label>Approval Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluations_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluations Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grant_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Organization</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Organization</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Grant</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trainings (Grant Organization)</relationshipLabel>
        <relationshipName>Trainings_Grant_Organization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Type__c</fullName>
        <label>Incentive Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Gift Card</fullName>
                </value>
                <value>
                    <fullName>Honorarium</fullName>
                </value>
                <value>
                    <fullName>Stipend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Area_1__c</fullName>
        <description>Sets not only outreach area, but if outreach should be sent for a given event.  Leave blank if the event is not the first day of a training.</description>
        <inlineHelpText>Sets not only outreach area, but if outreach should be sent for a given event.  Leave blank if the event is not the first day of a training.</inlineHelpText>
        <label>Outreach Area 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Area_2__c</fullName>
        <label>Outreach Area 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Area_3__c</fullName>
        <label>Outreach Area 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Counties</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outreach_Areas__c</fullName>
        <formula>TEXT(Outreach_Area_1__c) + &quot;,&quot; + TEXT(Outreach_Area_2__c) + &quot;,&quot; + TEXT(Outreach_Area_3__c) + &quot;,&quot; + TEXT(Outreach_Area_4__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outreach Areas</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outreach_Today__c</fullName>
        <description>Outreach today available for training</description>
        <formula>AND(
OR(ROUND(c501_cm__ii_Days_Until_Class__c, 0) = 30, ROUND(c501_cm__ii_Days_Until_Class__c, 0) = 14, ROUND(c501_cm__ii_Days_Until_Class__c, 0) = 7),
OR(NOT(ISBLANK(TEXT(Outreach_Area_1__c))), NOT(ISBLANK(TEXT(Outreach_Area_2__c))), NOT(ISBLANK(TEXT(Outreach_Area_3__c))), NOT(ISBLANK(TEXT(Outreach_Area_4__c))))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Outreach today available for training</inlineHelpText>
        <label>Outreach Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_County__c</fullName>
        <formula>TEXT(c501_cm__C501_Training_Location__r.County__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_State__c</fullName>
        <formula>c501_cm__C501_Training_Location__r.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Training State</label>
        <type>Text</type>
    </fields>
</CustomObject>